--- a/app/views/organizations/sent_invitations/new.html.erb
+++ b/app/views/organizations/sent_invitations/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= modal do %>
   <%= render PageComponent.new(title: t("organizations.memberships.new.title")) do |component| %>
-    <%= simple_form_for @membership_invitation, url: organization_sent_invitations_path(@organization), html: { class: "contents space-y-4" } do |form| %>
-      <%= render "shared/errors", object: form.object %>
+    <%= simple_form_for @membership_invitation, url: organization_sent_invitations_path(@organization), html: { class: "contents space-y-4" } do |f| %>
+      <%= render "shared/errors", object: f.object %>
 
-      <%= form.input :email,
+      <%= f.input :email,
                       placeholder: "hello@superails.com",
                       required: true,
                       input_html: {
@@ -16,7 +16,7 @@
                         autofocus: !turbo_native_app?
                       } %>
 
-      <div class="flex justify-end"><%= form.button :submit, "Invite", class: "btn-primary" %></div>
+      <div class="flex justify-end"><%= f.button :submit, "Invite", class: "btn-primary" %></div>
     <% end %>
   <% end %>
 <% end %>
