all layouts have platform_identifier

--- a/app/views/layouts/centered.html.erb
+++ b/app/views/layouts/centered.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="h-full bg-base-300 text-base-content">
+<html lang="en" class="h-full bg-base-300 text-base-content" <%= platform_identifier %>>
   <head><%= render "layouts/head" %></head>
 
   <body class="flex flex-col min-h-screen">
