--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="h-full bg-base-100 text-base-content">
+<html lang="en" class="h-full bg-base-100 text-base-content" <%= platform_identifier %>>
   <head><%= render "layouts/head" %></head>
 
   <body class="flex h-dvh">
