--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,4 +1,4 @@
-<section class="gap-y-4 mx-auto <%= width_class %> @container">
+<section class="space-y-4 mx-auto <%= width_class %> @container">
   <% if title.present? || title_content.present? || action_list.present? %>
     <div class="flex justify-between gap-4 flex-wrap">
       <% if title_content.present? && !hide_title_on_native_class %>
