--- a/app/views/organizations/memberships/edit.html.erb
+++ b/app/views/organizations/memberships/edit.html.erb
@@ -11,7 +11,7 @@
                   label_method: :first,
                   value_method: :last %>
 
-      <div class="flex justify-end"><%= f.button :submit, class: "btn-primary" %></div>
+      <div class="flex justify-end"><%= f.button :submit, class: "btn btn-primary" %></div>
     <% end %>
   <% end %>
 <% end %>
