--- a/app/views/organizations/sent_invitations/new.html.erb
+++ b/app/views/organizations/sent_invitations/new.html.erb
@@ -16,7 +16,7 @@
                     autofocus: !turbo_native_app?
                   } %>
 
-      <div class="flex justify-end"><%= f.button :submit, "Invite", class: "btn-primary" %></div>
+      <div class="flex justify-end"><%= f.button :submit, "Invite", class: "btn btn-primary" %></div>
     <% end %>
   <% end %>
 <% end %>
