--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -17,7 +17,7 @@
               <div class="flex items-center justify-between">
                 <div class="flex items-center gap-3">
                   <div class="text-2xl">
-                    <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-8 h-8" %>
+                    <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:icon]}.svg", class: "w-8 h-8", "aria-label": ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name] %>
                   </div>
 
                   <div class="font-medium">
