--- a/app/views/organizations/memberships/index.html.erb
+++ b/app/views/organizations/memberships/index.html.erb
@@ -3,53 +3,57 @@
 <%= render "organizations/memberships/tabs", active_tab: :memberships %>
 
 <%= render PageComponent.new do %>
-  <div class="table-responsive">
-    <table>
-      <thead>
-        <tr>
-          <th><%= Membership.human_attribute_name(:user) %></th>
-          <th><%= Membership.human_attribute_name(:role) %></th>
-          <th><%= Membership.human_attribute_name(:created_at) %></th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody id="memberships">
-        <% @memberships.each do |membership| %>
+  <% if @memberships.any? %>
+    <div class="table-responsive">
+      <table>
+        <thead>
           <tr>
-            <td data-label="<%= Membership.human_attribute_name(:user) %>">
-              <div class="font-medium flex items-center gap-2">
-                <%= user_avatar(membership.user) %>
-
-                <% if Current.membership.admin? %>
-                  <%= membership.user.email %>
-                <% else %>
-                  <%= membership.user.email.split("@").first %>
-                <% end %>
-              </div>
-            </td>
-
-            <td data-label="<%= Membership.human_attribute_name(:role) %>">
-              <div class="badge badge-xs badge-soft capitalize">
-                <%= membership.role %>
-              </div>
-            </td>
-
-            <td
-              data-label="<%= Membership.human_attribute_name(:created_at) %>"
-            >
-              <%= l membership.created_at, format: :short %>
-            </td>
-
-            <td>
-              <div class="flex items-center gap-2 justify-end">
-                <%= link_to t("shared.actions.edit"), edit_organization_membership_path(membership.organization, membership), data: { turbo_frame: :modal }, class: "btn btn-sm btn-secondary" if policy(membership).edit? %>
-                <%= button_to Current.membership == membership ? t("organizations.memberships.actions.leave") : t("organizations.memberships.actions.remove_member"), organization_membership_path(membership.organization, membership), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-sm btn-error" if policy(membership).destroy? %>
-              </div>
-            </td>
+            <th><%= Membership.human_attribute_name(:user) %></th>
+            <th><%= Membership.human_attribute_name(:role) %></th>
+            <th><%= Membership.human_attribute_name(:created_at) %></th>
+            <th></th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+        </thead>
+
+        <tbody id="memberships">
+          <% @memberships.each do |membership| %>
+            <tr>
+              <td data-label="<%= Membership.human_attribute_name(:user) %>">
+                <div class="font-medium flex items-center gap-2">
+                  <%= user_avatar(membership.user) %>
+
+                  <% if Current.membership.admin? %>
+                    <%= membership.user.email %>
+                  <% else %>
+                    <%= membership.user.email.split("@").first %>
+                  <% end %>
+                </div>
+              </td>
+
+              <td data-label="<%= Membership.human_attribute_name(:role) %>">
+                <div class="badge badge-xs badge-soft capitalize">
+                  <%= membership.role %>
+                </div>
+              </td>
+
+              <td
+                data-label="<%= Membership.human_attribute_name(:created_at) %>"
+              >
+                <%= l membership.created_at, format: :short %>
+              </td>
+
+              <td>
+                <div class="flex items-center gap-2 justify-end">
+                  <%= link_to t("shared.actions.edit"), edit_organization_membership_path(membership.organization, membership), data: { turbo_frame: :modal }, class: "btn btn-sm btn-secondary" if policy(membership).edit? %>
+                  <%= button_to Current.membership == membership ? t("organizations.memberships.actions.leave") : t("organizations.memberships.actions.remove_member"), organization_membership_path(membership.organization, membership), method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-sm btn-error" if policy(membership).destroy? %>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% else %>
+    <%= render EmptyStateComponent.new %>
+  <% end %>
 <% end %>
