--- a/app/views/organizations/transfers/_form.html.erb
+++ b/app/views/organizations/transfers/_form.html.erb
@@ -6,5 +6,5 @@
               include_blank: true,
               required: true %>
 
-  <div class="flex justify-end"><%= f.button :submit, class: "btn-primary", data: { turbo_confirm: t("shared.actions.confirm") } %></div>
+  <div class="flex justify-end"><%= f.button :submit, class: "btn btn-primary", data: { turbo_confirm: t("shared.actions.confirm") } %></div>
 <% end %>
