--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,23 +1,23 @@
-<nav class="dock dock-lg sticky bottom-0 lg:hidden border-t border-base-content/20">
+<nav class="dock dock-lg sticky bottom-0 lg:hidden border-t border-base-content/20" aria-label="Mobile navigation">
   <% if Current.organization %>
-    <%= active_link_to organization_dashboard_path(Current.organization), active: %r{^/organizations/}, class_active: "dock-active", class: "" do %>
-      <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
+    <%= active_link_to organization_dashboard_path(Current.organization), active: %r{^/organizations/}, class_active: "dock-active", class: "", "aria-label": t("shared.navigation.home") do %>
+      <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]", "aria-hidden": "true" %>
       <span class="dock-label"><%= t("shared.navigation.home") %></span>
     <% end %>
   <% else %>
-    <%= active_link_to organizations_path, active: :exclusive, class_active: "dock-active", class: "" do %>
-      <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
+    <%= active_link_to organizations_path, active: :exclusive, class_active: "dock-active", class: "", "aria-label": t("shared.navigation.home") do %>
+      <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]", "aria-hidden": "true" %>
       <span class="dock-label"><%= t("shared.navigation.home") %></span>
     <% end %>
   <% end %>
 
-  <%= active_link_to search_path, class_active: "dock-active", data: { turbo_frame: :modal } do %>
-    <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-[1.2em]" %>
+  <%= active_link_to search_path, class_active: "dock-active", data: { turbo_frame: :modal }, "aria-label": t("search.index.title") do %>
+    <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-[1.2em]", "aria-hidden": "true" %>
     <span class="dock-label"><%= t("search.index.title") %></span>
   <% end %>
 
-  <%= active_link_to user_notifications_path, class_active: "dock-active" do %>
-    <%= inline_svg_tag "svg/bell.svg", class: "size-[1.2em]" %>
+  <%= active_link_to user_notifications_path, class_active: "dock-active", "aria-label": t("users.notifications.index.title") do %>
+    <%= inline_svg_tag "svg/bell.svg", class: "size-[1.2em]", "aria-hidden": "true" %>
     <span class="dock-label"><%= t("users.notifications.index.title") %></span>
   <% end %>
 </nav>
