Add profile and notifications links to navigation
Added a profile link with user avatar to the footer navigation and a notifications link to the user links menu. Updated the user show page to display user links, and added a 'Profile' translation key.

--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -20,4 +20,9 @@
     <%= inline_svg_tag "svg/bell.svg", class: "size-[1.2em]", "aria-hidden": "true" %>
     <span class="dock-label"><%= t("users.notifications.index.title") %></span>
   <% end %>
+
+  <%= active_link_to user_path, class_active: "dock-active", "aria-label": t("shared.navigation.profile") do %>
+    <%= user_avatar(current_user, classes: "size-[1.2em]") %>
+    <span class="dock-label"><%= t("shared.navigation.profile") %></span>
+  <% end %>
 </nav>
